--- a/k8s/secrets.yaml
+++ b/k8s/secrets.yaml
@@ -4,5 +4,5 @@ metadata:
   name: estate-secrets
 type: Opaque
 data:
-  DJANGO_SECRET_KEY: YOUR_DJANGO_SECRET_KEY_BASE64
-  DB_PASSWORD: YOUR_DB_PASSWORD_BASE64
+  DJANGO_SECRET_KEY: MWYyZDFlMjMyZGY0ODEyOWEwZGI3YjIw
+  DB_PASSWORD: MWYyZDFlMjMyZGY0ODEyOWEwZGI3YjIw
