--- a/k8s/postgres-statefulset.yaml
+++ b/k8s/postgres-statefulset.yaml
@@ -22,7 +22,10 @@ spec:
             - name: POSTGRES_USER
               value: estate_user
             - name: POSTGRES_PASSWORD
-              value: estate_password
+              valueFrom:
+                secretKeyRef:
+                  name: estate-secrets
+                  key: DB_PASSWORD
           ports:
             - containerPort: 5432
           volumeMounts:
