--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,36 @@
+version: '3.8'
+
 services:
+  db:
+    image: postgres:16
+    environment:
+      POSTGRES_DB: estate_db
+      POSTGRES_USER: estate_user
+      POSTGRES_PASSWORD: Jayantop@8 # Using the password from your secrets.yaml
+    volumes:
+      - db_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+
   web:
     build:
       context: .
       dockerfile: dockerfile
-    ports:
-      - "8000:8000"
+    command: sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     volumes:
       - ./media:/app/media
       - ./static:/app/static
+    ports:
+      - "8000:8000"
+    environment:
+      DJANGO_SECRET_KEY: MWYyZDFlMjMyZGY0ODEyOWEwZGI3YjIw # From your secrets.yaml
+      DB_NAME: estate_db
+      DB_USER: estate_user
+      DB_PASSWORD: Jayantop@8 # From your secrets.yaml
+      DB_HOST: db
+      DB_PORT: 5432
+    depends_on:
+      - db
+
+volumes:
+  db_data:
